[gd_scene load_steps=17 format=4 uid="uid://dd30axi4gohbt"]

[ext_resource type="PackedScene" uid="uid://db4cc18hdvu45" path="res://Player/player.tscn" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://d3juvjra20lao" path="res://World/world.gd" id="1_tlwt5"]
[ext_resource type="Script" uid="uid://csksa2hykfxdp" path="res://World/camera.gd" id="2_aqk2v"]
[ext_resource type="PackedScene" uid="uid://bxtxj8wn0ivdn" path="res://World/walls.tscn" id="2_fj7yv"]
[ext_resource type="PackedScene" uid="uid://ujivl2lh7elw" path="res://World/interactable.tscn" id="5_036b0"]
[ext_resource type="PackedScene" uid="uid://cu6viuvsf4kmw" path="res://Enemies/ghost_enemy.tscn" id="6_dwbse"]
[ext_resource type="AudioStream" uid="uid://rdo7chr04f33" path="res://Assets/Sounds/explosion.wav" id="7_yf0ba"]
[ext_resource type="PackedScene" uid="uid://cc7gexdx2h3df" path="res://Enemies/bomb_enemy.tscn" id="8_awrha"]
[ext_resource type="AudioStream" uid="uid://div4da4xnsyfl" path="res://Assets/Sounds/hit.wav" id="8_eidgh"]
[ext_resource type="AudioStream" uid="uid://cvs7awpwtov0e" path="res://Assets/Sounds/sword.wav" id="9_oe8m4"]
[ext_resource type="AudioStream" uid="uid://jug6qjncths4" path="res://Assets/Sounds/eat.wav" id="9_w47uh"]
[ext_resource type="Resource" uid="uid://c6rdc5yxkohof" path="res://Levels/tutorial.tres" id="11_lo5ox"]
[ext_resource type="Script" uid="uid://bu1rldo4ud10" path="res://World/level_loader.gd" id="12_h2aik"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_oe8m4"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("8_eidgh")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lo5ox"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("9_w47uh")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_w47uh"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("9_oe8m4")

[node name="World" type="Node2D"]
script = ExtResource("1_tlwt5")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(-24, 0)
anchor_mode = 0
zoom = Vector2(10.25, 10.25)
limit_enabled = false
position_smoothing_enabled = true
position_smoothing_speed = 20.0
script = ExtResource("2_aqk2v")

[node name="Player" parent="." instance=ExtResource("1_f3sb7")]
position = Vector2(0, 24)

[node name="Walls" parent="." instance=ExtResource("2_fj7yv")]

[node name="Base" parent="Walls" index="0"]
tile_map_data = PackedByteArray("AAAHAAEAAAABAAAAAAAIAAIAAAABAAAAAAAJAAMAAAABAAAAAAAJAAQAAAABAAAAAAAGAAcAAAABAAAAAAAHAAYAAAABAAAAAAAIAAUAAAABAAAAAAAGAAAAAAABAAAAAAAPAAcAAAABAAAAAAAPAAYAAAABAAAAAAAPAAUAAAABAAAAAAAPAAEAAAABAAAAAAAPAAAAAAABAAAAAAAQAAIAAAABAAAAAAARAAMAAAABAAAAAAARAAQAAAABAAAAAAASAAUAAAABAAAAAAAQAAQAAAABAAAAAAAQAAUAAAABAAAAAAARAAYAAAABAAAAAAASAAcAAAABAAAAAAASAAYAAAABAAAAAAATAAYAAAABAAAAAAATAAcAAAABAAAAAAAQAAAAAAABAAAAAAASAAAAAAABAAAAAAASAAEAAAABAAAAAAASAAIAAAABAAAAAAASAAMAAAABAAAAAAASAAQAAAABAAAAAAATAAQAAAABAAAAAAATAAUAAAABAAAAAAARAAIAAAABAAAAAAARAAEAAAABAAAAAAAQAAcAAAABAAAAAAATAAIAAAABAAAAAAATAAEAAAABAAAAAAATAAAAAAABAAAAAAAUAAAAAAABAAAAAAAOAAAAAAABAAAAAAAaAAcAAAABAAAAAAAbAAYAAAABAAAAAAAcAAcAAAABAAAAAAAcAAUAAAABAAAAAAAbAAAAAAABAAAAAAAaAAMAAAABAAAAAAAaAAQAAAABAAAAAAAaAAUAAAABAAAAAAAcAAEAAAABAAAAAAAbAAEAAAABAAAAAAAaAAAAAAABAAAAAAAbAAIAAAABAAAAAAAaAAYAAAABAAAAAAAkAAcAAAABAAAAAAAkAAQAAAABAAAAAAAkAAIAAAABAAAAAAAkAAAAAAABAAAAAAAkAAYAAAABAAAAAAAiAAMAAAABAAAAAAAiAAEAAAABAAAAAAAiAAUAAAABAAAAAAA=")

[node name="Interactable" parent="." instance=ExtResource("5_036b0")]
tile_map_data = PackedByteArray("AAAMAAEAAAADAAAAAAAMAAMAAAABAAIAAAAMAAYAAAADAAAAAAAMAAQAAAABAAIAAAARAAAAAAABAAQAAAD8/wAAAAADAAAAAAAbAAcAAAABAAQAAAA=")

[node name="Enemies" type="Node2D" parent="."]

[node name="GhostEnemy" parent="Enemies" instance=ExtResource("6_dwbse")]
position = Vector2(224, 24)

[node name="GhostEnemy2" parent="Enemies" instance=ExtResource("6_dwbse")]
position = Vector2(240, 40)

[node name="BombEnemy" parent="Enemies" instance=ExtResource("8_awrha")]
position = Vector2(304, 8)

[node name="BombEnemy2" parent="Enemies" instance=ExtResource("8_awrha")]
position = Vector2(312, 40)

[node name="Bomb" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_yf0ba")

[node name="Attack" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_oe8m4")

[node name="Eat" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_lo5ox")

[node name="Sword" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_w47uh")

[node name="LevelLoader" type="Node" parent="."]
script = ExtResource("12_h2aik")
selected = ExtResource("11_lo5ox")

[node name="FinishLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 64)
width = 1.0

[connection signal="item_used" from="Player" to="." method="_on_player_item_used"]
[connection signal="moved" from="Player" to="." method="_on_player_moved"]
[connection signal="coin_collected" from="Interactable" to="." method="_on_interactable_coin_collected"]
[connection signal="explode_bomb" from="Interactable" to="." method="_on_interactable_explode_bomb"]

[editable path="Walls"]
